methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: not found: value bisc
  bisc = estSurBiscuit()
  ^MethodsReturning:3: error: not found: value bisc
  if (bisc)
      ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (bisc)
  ^